--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background: url('https://i.ytimg.com/vi/Kgz0qyZXJ9I/mqdefault.jpg') no-repeat center center fixed;
+    background: url('https://img.freepik.com/free-vector/top-view-cup-coffee-with-roasted-beans_52683-32340.jpg') no-repeat center center fixed;
     background-size: cover; /* Membuat gambar menutupi seluruh halaman */
     color: #333;
     display: flex;
