--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Arial', sans-serif;
     background: url('https://img.freepik.com/free-vector/top-view-cup-coffee-with-roasted-beans_52683-32340.jpg') no-repeat center center fixed;
     background-size: cover; /* Membuat gambar menutupi seluruh halaman */
-    color: #333;
+    color: #4f3f2f;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,7 +32,7 @@ body {
 
 /* Heading Laporan */
 h1 {
-    color: #333;
+    color: #7d5a50;
     font-size: 28px;
     margin-bottom: 30px;
     text-transform: uppercase;
@@ -51,12 +51,12 @@ h1 {
 
 .order-summary p {
     font-size: 16px;
-    color: #333;
+    color: #0e0101;
     margin: 10px 0;
 }
 
 .order-summary strong {
-    color: #0077b6;
+    color: #110902;
 }
 
 /* Styling untuk tombol "Kembali" */
@@ -66,7 +66,7 @@ button {
     font-size: 16px;
     font-weight: bold;
     color: #ffffff;
-    background-color: #00b4d8;
+    background-color: #4f3f2f;
     border: none;
     border-radius: 6px;
     cursor: pointer;
@@ -74,12 +74,12 @@ button {
 }
 
 button:hover {
-    background-color: #0077b6;
+    background-color: #4f3f2f;
     transform: translateY(-2px);
 }
 
 button:active {
-    background-color: #005f82;
+    background-color: #4f3f2f;
     transform: translateY(1px);
 }
 
@@ -89,7 +89,7 @@ button:active {
 #summary-harga,
 #summary-total {
     font-weight: bold;
-    color: #0077b6;
+    color: #0e0601;
 }
 
 /* Responsif Design */
