--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background: url('https://img.freepik.com/free-vector/top-view-cup-coffee-with-roasted-beans_52683-32340.jpg') no-repeat center center fixed;
+    background: url('https://static.vecteezy.com/system/resources/previews/011/332/525/non_2x/hand-drawn-coffee-concept-background-free-vector.jpg') no-repeat center center fixed;
     background-size: cover;
     color: #4f3f2f; /* Warna coklat tua */
     display: flex;
