--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* style.css */
-
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +6,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background: url('https://static.vecteezy.com/system/resources/previews/011/332/525/non_2x/hand-drawn-coffee-concept-background-free-vector.jpg') no-repeat center center fixed;
+    background: url('./images/background.jpg') no-repeat center center fixed;
     background-size: cover;
     color: #4f3f2f; /* Warna coklat tua */
     display: flex;
