--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background: url('https://static.vecteezy.com/system/resources/previews/011/332/525/non_2x/hand-drawn-coffee-concept-background-free-vector.jpg') no-repeat center center fixed;
+    background: url('./images/background.jpg') no-repeat center center fixed;
     background-size: cover; /* Membuat gambar menutupi seluruh halaman */
     color: #4f3f2f;
     display: flex;
